# CombineTool

./: CMakeLists.txt  readme.txt
include/combinetool/: config.h  types.h
include/combinetool/args/: argument_parser.h
include/combinetool/encoding/: encoding_converter.h  encoding_detector.h
include/combinetool/filter/: filter.h
include/combinetool/format/: format_detector.h
include/combinetool/io/: mapped_file_reader.h  smart_file_reader.h  stream_reader.h  stream_writer.h
include/combinetool/merge/: binary_merger.h  conditional_merger.h  interleaved_merger.h  merger.h  sequential_merger.h  timestamp_sorted_merger.h
include/combinetool/utils/: file_utils.h  path_utils.h  string_utils.h  timestamp_extractor.h
src/: main.cpp
src/args/: argument_parser.cpp
src/encoding/: encoding_converter.cpp  encoding_detector.cpp
src/filter/: filter.cpp
src/format/: format_detector.cpp
src/io/: mapped_file_reader.cpp  smart_file_reader.cpp  stream_reader.cpp  stream_writer.cpp
src/merge/: binary_merger.cpp  conditional_merger.cpp  interleaved_merger.cpp  merger.cpp  sequential_merger.cpp  timestamp_sorted_merger.cpp
src/utils/: file_utils.cpp  path_utils.cpp  string_utils.cpp  timestamp_extractor.cpp
test/: file2.csv  output.csv  output2.csv  output_interleaved.csv
